# NeuralNetworks

./: CMakeLists.txt  README.md
NeuralNetworks/: README.md
NeuralNetworks/GCC/: .junk  LogFile.txt  Makefile  NeuralNet
NeuralNetworks/VS2015/: Config.props  LogFile.txt  NeuralNetworks.sdf  NeuralNetworks.sln  NeuralNetworks.vcxproj  NeuralNetworks.vcxproj.filters
NeuralNetworks/VS2015/NeuralNetworks/: Config.props  NeuralNetworks.sln  NeuralNetworks.vcxproj  NeuralNetworks.vcxproj.filters
NeuralNetworks/VisualStudio14/: Config.props  NeuralNetworks.sln
build_files/GCC/: Makefile
build_files/VS2015/: Config.props  NeuralNetworks.vcxproj  NeuralNetworks.vcxproj.filters
data/: CIFAR_Network.config  GetCIFAR10Data.sh  GetMNISTData.sh  MNIST_LeNet-5.config  MNIST_Network.config  README.md  comparetcnn1.txt  fc_only.config  test1.config  test2.config
data/MNIST/: sizes.txt
otherSrc/OldSource/: scene.txt
src/data/: CIFAR-ImageReader.hxx  DataSets.cxx  DataSets.hxx  MINST-ImageReader.cxx  MINST-ImageReader.hxx  MNIST-ImageReader.cxx  MNIST-ImageReader.hxx
src/neuralnets/: Activation.hxx  AttenuationLayer.hxx  AveragePoolingLayer.hxx  ConvolutionLayer.hxx  CudaLayers.cuh  Cuda_ConvolutionLayer.cu  Cuda_FullyConnectedLayer.cu  Cuda_FullyConnectedLayer.cuh  DropConnectLayer.hxx  ErrorFunctions.hxx  FullyConnectedLayer.hxx  Layer.hxx  MaxPoolingLayer.hxx  Network.cxx  Network.hxx  NeuralNet_Main.cxx
src/utils/: CommandLine.hxx  CudaSimpleMatrix.cuh  CudaUtils.cuh  CudaUtils.hxx  PPMIO.cxx  SimpleMatrix.hxx  Utils.hxx  Vec23.hxx
(+129 files in other folders)
